# rust-pipes

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .valgrindrc  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs  gl-pipes.cap  ignore_drivers.supp  material_port.js  objects.cpp  pipe.cpp  pipe_flexy.cpp  pipe_main.cpp  pipe_normal.cpp  pipe_test  ss_methods.cpp  state.cpp  state_flexy.cpp  state_normal.cpp
.github/workflows/: ci.yaml  codeberg-mirror.yaml  web-deploy.yaml
graphics/: textures.c
include/: glstuff.h  objects.h  pipe_main.h  utils.h
include/graphics/: textures.h
include/pipe/: pipe.h  pipe_node.h  pipe_normal.h  pipe_object.h
include/state/: state.h  state_flexy.h  state_normal.h
refactor/current/: glstuff.cpp  objects.cpp  pipe.cpp  pipe_normal.cpp  state.cpp  state_normal.cpp  utils.cpp
refactor/current/include/: glstuff.h  objects.h  pipe_main.h  structs.h  utils.h
refactor/current/include/pipe/: pipe.h  pipe_node.h  pipe_normal.h
refactor/current/include/state/: state_normal.h
refactor/maybe-later/: pipe_flexy.cpp  pipe_flexy.h  state_flexy.cpp
refactor/maybe-later/graphics/: materials.h  textures.h
src/: base.rs  bootstrap.cpp  cli.rs  config.rs  draw.cpp  draw.rs  engine.rs  gl.c  gl_init.cpp  glad.c  global_state.cpp  lib.rs  main.rs  material.rs  node_array.cpp  node_struct.cpp  nodes.cpp  pipe.cpp  pipe.rs  pipe_layer.cpp  pipe_objects.cpp  pipelist.cpp  util.rs  utils.cpp  world.rs
src-old/: nodes.cpp  pipe_layer.cpp  utils.cpp
src-old/include/: nodes.h  pipe_layer.h  utils.h
src-old/include/glad/: gl.h  glad.h
src-old/include/graphics/: gl_drawThread.h  gl_materials.h
src-old/old/: global_state.cpp
src-old/old/include/: global_state.h  pipe.h
src-old/old/include/objects/: elbow_object.h  object.h
src-old/old/objects/: sphere_object.cpp
src-old/scratch/: pipelayer_test.cpp
src-old/scratchwork/: pipe_test.c  pipe_test_nox11.cpp
src/base/: draw.rs  error.rs  node_struct.rs  pipe.rs  util.rs  world.rs
src/engine/: config.rs  core.rs  rng.rs  teapot.rs  util.rs  world.rs
src/graphics/: gl_drawThread.cpp  gl_init.cpp  gl_materials.c  gl_materials.cpp
src/include/: constants.h  draw.h  gl_init.h  global_state.h  node_array.h  node_struct.h  nodes.h  pipe.h  pipe_layer.h  pipe_objects.h  shader.h  structs.h  utils.h
src/include/glad/: glad.h
src/include/graphics/: gl_drawThread.h  gl_init.h  gl_materials.h
src/include/objects/: object.h  pipe_object.h  sphere_object.h
src/lib/: mod.rs  node_struct.rs  pipe.rs  util.rs
src/objects/: balljoint_object.cpp  elbow_object.cpp  pipe_object.cpp
src/old/: node_array.cpp
src/old/graphics/: gl_materials.cpp
src/old/include/: node_array.h
src/old/include/objects/: balljoint_object.h
src/pipe/: pipe.cpp  pipe_draw.cpp  pipe_part.cpp
src/scratch/: boundingbox.cpp  glTesting.cpp  main.cpp  pipelayer_test.cpp  vao-test.cpp
src/scratchwork/: pipe_test_nox11.cpp
src/shaders/: pipeTransformX.vs
web/: .firebaserc  .gitignore  index.html  index.js  package-lock.json  package.json  webpack.config.js
