[package]
name = "rust-pipes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "rust_pipes_wasm"

[dependencies]
three-d = "0.16.3"
three-d-asset = "0.6.0"
# rand = "0.8.5"
fastrand = "2.0.1"
cfg-if = "1.0.0"
md5 = "0.7.0"      # used for non-crypto seed translation

[dev-dependencies]
mockall = "0.12.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.4.6", features = ["derive", "cargo"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"
fastrand = { version = "2.0.1", features = ["std", "js"] }
