[package]
name = "rust-pipes"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A remake of the 3D Pipes Screensaver from Windows 98 in Rust"
repository = "https://github.com/FaceFTW/rust-pipes"
build = "build.rs"
autobins = true

[[bin]]
name = "rust-pipes"
path = "./src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "rust_pipes_lib"


[dependencies]
winit = "0.28"
three-d = "0.16.3"
three-d-asset = "0.6.0"
fastrand = "2.0.1"
cfg-if = "1.0.0"
md5 = "0.7.0"           # used for non-crypto seed translation

[dev-dependencies]
mockall = "0.12.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.4.6", features = ["derive", "cargo"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
fastrand = { version = "2.0.1", features = ["std", "js"] }

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1.12"

[profile.release]
lto = true
codegen-units = 1
